Qc Part Name Alignment Fix

--- a/src/App.css
+++ b/src/App.css
@@ -49,6 +49,11 @@
   padding-right: 0.5rem;
 }
 
+.main-logo {
+  position: absolute;
+  right: 45%;
+}
+
 .user-name{
   color: white;
   justify-content: flex-end;
@@ -58,15 +63,15 @@
 }
 
 .main-tiles{
-  position: relative;
-  left: 16%;
+  /* position: relative;
+  left: 16%; */
   /* top: 20%; */
   /* margin-top: 3px; */
   display: flex;
   justify-content: space-around;
   align-items: center;
   border: 2.5px solid #7F377F;
-  width: 70%;
+  /* width: 70%; */
   border-end-start-radius: 1.5rem;
   border-end-end-radius: 1.5rem;
   padding-bottom: 0.5rem;
@@ -74,23 +79,23 @@
 }
 
 .main-tile{
-  position: relative;
+  /* position: relative; */
   min-height: 2rem;
-  left: 16%;
+  /* left: 16%; */
   /* top: 12%; */
   /* margin-top: 1rem; */
   /* display: flex; */
   /* justify-content: space-around; */
   border: 2.5px solid #7F377F;
   border-bottom: transparent;
-  width: 70%;
+  /* width: 70%; */
   /* border-top-left-radius: 1rem;
   border-top-right-radius: 1rem; */
   border-top-left-radius: 1.5rem;
   border-top-right-radius: 1.5rem;
 
   display: flex;
-  justify-content: space-evenly;
+  /* justify-content: space-evenly; */
   align-items: center;  
   /* padding-left: 0.5rem; */
   /* padding: ; */
@@ -98,6 +103,9 @@
 
 .tiles{
   margin-top: 5.3rem;
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .remark-area{
@@ -115,17 +123,17 @@
 .video-name{
   font-family: "heiti sc";
   font-weight: bolder;
-  position: relative;
+  /* position: relative; */
   width: auto;
-  /* right: 80%; */
+  /* left: 10%; */
 }
 
 .video-name-dynamic{
   font-family: "heiti sc";
   font-size: small;
-  width: 50%;
-  position: relative;
-  left: 9%;
+  /* width: 50%; */
+  /* position: relative; */
+  /* left: 9%; */
   overflow-y: hidden;  
   overflow-x: hidden;
   padding-right: 1rem,
@@ -158,4 +166,16 @@
   display: flex;
   justify-content: center;
   position: absolute;
+  top: 4rem;
+
+}
+
+.tc-inner{
+  display: flex;
+  align-items: center;
+}
+.css-1u15d99-MuiTypography-root {
+  right: 0!important;
+  width: 50%;
+  margin-left: 3%!important;
 }
